app/python-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-sample-app
spec:
  type: ClusterIP
  selector:
    app: python-sample-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
    name: python-sample-app
