app/python-app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-python
spec:
  rules:
  - host: python-app.local
    http:
      paths:
      - backend:
          serviceName: python-sample-app
          servicePort: 80
